force-app/main/default/objects/Locations__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Descriptive or traditional address.</description>
    <inlineHelpText>Fill in the descriptive or traditional address of the location.</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>