force-app/main/default/objects/Locations__c/fields/forBranch__c.field-meta.xml
<CustomField>
    <fullName>forBranch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if this location is used for Branches.</description>
    <inlineHelpText>Check this if this location is used for Branches.</inlineHelpText>
    <label>forBranch</label>
    <type>Checkbox</type>
</CustomField>