force-app/main/default/objects/Locations__c/fields/forCustomer__c.field-meta.xml
<CustomField>
    <fullName>forCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check it if this location is a Customer&apos;s location.</description>
    <inlineHelpText>Check it if this location is a Customer&apos;s location.</inlineHelpText>
    <label>forCustomer</label>
    <type>Checkbox</type>
</CustomField>