force-app/main/default/objects/Locations__c/fields/forDelivery__c.field-meta.xml
<CustomField>
    <fullName>forDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check it if this location is used for delivery.</description>
    <inlineHelpText>Check it if this location is used for delivery.</inlineHelpText>
    <label>forDelivery</label>
    <type>Checkbox</type>
</CustomField>