force-app/main/default/objects/Locations__c/fields/Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Land_Mark__c</fullName>
    <description>Land mark nearby to the geological location.</description>
    <inlineHelpText>Note Land marks nearby to the geological location.</inlineHelpText>
    <label>Land Mark</label>
    <length>128</length>
    <type>Text</type>
</CustomField>